--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,8 @@ bower_components
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
-# Config directories
-configs/
+# Secret directories
+secrets/
 
 # Dependency directories
 node_modules/
