--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "body-parser": "^1.19.1",
     "jsonwebtoken": "^8.5.1",
     "uuid": "^8.3.2",
-    "mongoose": "^6.1.5"
+    "mongoose": "^6.1.5",
+    "sequelize": "^6.12.5" 
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
