--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "body-parser": "^1.19.1",
     "jsonwebtoken": "^8.5.1",
     "uuid": "^8.3.2",
-    "mongoose": "^6.1.5",
-    "sequelize": "^6.12.5" 
+    "sequelize": "^6.12.5",
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
-    "dotenv": "^10.0.0",
     "nodemon": "^2.0.15"
   },
   "repository": {
