--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "nodemon app.js"
+    "test": "CHOKIDAR_USEPOLLING=true FAST_REFRESH=false nodemon app.js"
   },
   "dependencies": {
     "express": "^4.17.2",
